# WW common libraries decended from earliest C&C games
add_subdirectory(Source/WWVegas)

# Graphics abstraction layer for OpenGL/DirectX support
add_subdirectory(Source/GraphicsAPI)

# profiling library
add_subdirectory(Source/profile)

# debugging library
add_subdirectory(Source/debug)

add_subdirectory(Source/EABrowserDispatch)
add_subdirectory(Source/EABrowserEngine)
add_subdirectory(Source/Compression)
