# WW common libraries decended from earliest C&C games
add_subdirectory(Source/WWVegas)

# Phase 41: Graphics Driver Framework (cross-platform)
add_subdirectory(Source/Graphics)

# profiling library
add_subdirectory(Source/profile)

# debugging library
add_subdirectory(Source/debug)

add_subdirectory(Source/EABrowserDispatch)
add_subdirectory(Source/EABrowserEngine)
add_subdirectory(Source/Compression)
